src/auth/snapshots/loco_rs__auth__jwt__tests__valid token and custom nested array claims.snap
---
source: src/auth/jwt.rs
assertion_line: 151
expression: jwt.validate(&token)
---
Ok(
    TokenData {
        header: Header {
            typ: Some(
                "JWT",
            ),
            alg: HS512,
            cty: None,
            jku: None,
            jwk: None,
            kid: None,
            x5u: None,
            x5c: None,
            x5t: None,
            x5t_s256: None,
            crit: None,
            enc: None,
            zip: None,
            url: None,
            nonce: None,
            extras: {},
        },
        claims: UserClaims {
            pid: "pid",
            exp: EXP,
            claims: {
                "level1": Object {
                    "level2": Object {
                        "level3": Array [
                            Number(1),
                            Number(2),
                            Number(3),
                        ],
                    },
                },
            },
        },
    },
)
